k3s/traefik/middleware-gitlab-auth.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: traefik-forward-auth
  name: traefik-forward-auth
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik-forward-auth
  template:
    metadata:
      labels:
        app: traefik-forward-auth
    spec:
      containers:
        - name: traefik-forward-auth
          image: thomseddon/traefik-forward-auth:latest
          ports:
            - containerPort: 4181
              protocol: TCP
          resources:
            limits:
              memory: "256Mi"
              cpu: "200m"
---
kind: Service
apiVersion: v1
metadata:
  name: traefik-forward-auth
  namespace: default
spec:
  selector:
    app: traefik-forward-auth
  ports:
    - name: http
      port: 80
      targetPort: 4181
      protocol: TCP
---

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-forward-auth
  labels:
    app: traefik
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`auth.dev.piman-digital.fr`)
    kind: Rule
    services:
    - name: traefik-forward-auth
      port: 80
  tls:
    secretName: auth.dev.piman-digital.fr
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: gitlab-auth
  namespace: default
spec:
  forwardAuth:
    address: http://traefik-forward-auth
    authResponseHeaders:
      - X-Forwarded-User
